Initial setup with form and styling

--- a/index.html
+++ b/index.html
@@ -14,35 +14,37 @@
     <div class="form-wrapper">
         <header class="form-header">
             <div class="header-content">
-                <img 
-                    src="https://cdn.prod.website-files.com/65c6896e8519c5d0bae5586f/664b8c1e593a1e81556b4238_0760849fb8.png" 
-                    alt="Koninklijke Loop Logo" 
-                    class="header-logo"
-                    onerror="this.onerror=null; this.src='fallback-logo.png';"
-                />
+                <div class="logo-section">
+                    <img 
+                        src="https://cdn.prod.website-files.com/65c6896e8519c5d0bae5586f/664b8c1e593a1e81556b4238_0760849fb8.png" 
+                        alt="Koninklijke Loop Logo" 
+                        class="header-logo"
+                        onerror="this.onerror=null; this.src='fallback-logo.png';"
+                    />
+                </div>
                 <div class="header-text">
-                    <h1>Welkom bij de Koninklijke Loop 2025!</h1>
+                    <h1>Koninklijke Loop 2025</h1>
                     <p class="header-intro">De sponsorloop van mensen met een beperking Voor een goed doel!</p>
                 </div>
                 <div class="event-details">
                     <div class="event-detail">
                         <span class="icon">📅</span>
-                        <div>
-                            <strong>Datum:</strong>
+                        <div class="detail-content">
+                            <strong>Datum</strong>
                             <span>Zaterdag 17 mei 2025</span>
                         </div>
                     </div>
                     <div class="event-detail">
                         <span class="icon">📍</span>
-                        <div>
-                            <strong>Locatie:</strong>
+                        <div class="detail-content">
+                            <strong>Locatie</strong>
                             <span>De Grote Kerk Apeldoorn</span>
                         </div>
                     </div>
                     <div class="event-detail">
-                        <span class="icon">⭐</span>
-                        <div>
-                            <strong>Afstanden:</strong>
+                        <span class="icon">🏃</span>
+                        <div class="detail-content">
+                            <strong>Afstanden</strong>
                             <span>2.5, 5, 10 en 15 KM</span>
                         </div>
                     </div>
